[tool.poetry]
name = "xarguebuf"
version = "1.0.0"
description = "Microservice for creating argument graphs from X/Twitter discussions"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "http://recap.uni-trier.de"
repository = "https://github.com/recap-utr/xarguebuf"

[tool.poetry.scripts]
xarguebuf = "xarguebuf.app:app"

[tool.poetry.dependencies]
python = "^3.10"
arguebuf = { version = "^2.1.1", extras = ["graphviz"] }
pendulum = "^2.1.2"
twarc = "^2.14.0"
arg-services = "^1.4.0"
rich-click = "^1.6.1"
typed-settings = "^23.0.1"
setuptools = "^68"
httpx = "^0.24.1"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.21.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
