[tool.poetry]
name = "xarguebuf"
version = "1.0.0"
description = "Microservice for creating argument graphs from X/Twitter discussions"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "http://recap.uni-trier.de"
repository = "https://github.com/recap-utr/xarguebuf"

[tool.poetry.scripts]
xarguebuf = "xarguebuf.app:app"

[tool.poetry.dependencies]
python = "^3.10"
arguebuf = "^2.3"
pendulum = "^2.1"
twarc = "^2.14"
arg-services = "^1.4"
rich-click = "^1.7"
typed-settings = "^23.0"
setuptools = "^68"
httpx = "^0.24"
pydantic = "^2.4"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
